<resources>
    <string name="app_name">ApiLoginReg</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="registration">Registration</string>
    <string name="back">Back</string>
    <string name="repeat_password">Repeat password</string>
    <string name="log_out">Log Out</string>
    <string name="save">save</string>
</resources>